--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ullam aut totam dicta quasi placeat fugiat possimus corporis neque dolorem a sequi iste ad, veritatis distinctio maiores dolor rem accusamus.</p>
+
+        <img src="images/3rd.jpg" width="350px" alt="Stadium">
     </div>
 </body>
 </html>
