--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <body>
     <div>
         <h1>My third website</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam id ratione nemo necessitatibus voluptatem aut neque quibusdam itaque reiciendis quidem!</p>
+        <p class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam id ratione nemo necessitatibus voluptatem aut neque quibusdam itaque reiciendis quidem!</p>
 
         <img src="images/1st.jpg" width="300px" alt=" di maria">
 
@@ -16,7 +18,7 @@
             <img src="images/2nd.jpg" width="400px" alt=" Leo Messi">
         
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ullam aut totam dicta quasi placeat fugiat possimus corporis neque dolorem a sequi iste ad, veritatis distinctio maiores dolor rem accusamus.</p>
+        <p class="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ullam aut totam dicta quasi placeat fugiat possimus corporis neque dolorem a sequi iste ad, veritatis distinctio maiores dolor rem accusamus.</p>
 
         <img src="images/3rd.jpg" width="350px" alt="Stadium">
     </div>
